[package]
name = "leavepulse-sdk"
version = "0.0.0"
edition = "2021"
description = "Generated resource SDK for the LeavePulse platform contract."

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror = "2"
anyhow = "1"
tokio = { version = "1", features = ["time", "sync"] }
base64 = "0.22"
sha2 = "0.10"
getrandom = "0.3"
serde_urlencoded = "0.7"
